--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-/*body, html {
+body {
 	margin: 0;
 	padding: 0;
-}*/
+}
 
 .container {
 	margin: 40px;
@@ -9,13 +9,81 @@
 
 .home-page {
 	background-image: url('./img/sweet1.jpeg');
-	height: 600px;
+	height: 90vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+.header-bottom {
+	height: 10vh;
+}
+
+.spanbutt {
+	text-align: center;
+}
+.down-button {
+	display: inline-block;
+	margin-top: -50px;
+	/*margin-bottom: 100px;*/
+	height: 85px;
+	width: 85px;
+	background-color: orange;
+	padding: 20px;
+	border-radius: 100%;
+}
+
 .about-page div {
 	text-align: center;
 }
+/*.about-par {
+	padding: 100px;
+}*/
+.about-page p {
+	padding: 100px;
+	font-size: 16px;
+}
+
+
+.fix2 {
+	background-image: url('./img/sweet4.jpeg');
+	height: 500px;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.menu-page {
+	padding-top: 20px;
+
+}
+.menu-page ul {
+	padding: 30px;
+	background-color: blue;
+}
+.menu-imgs {
+	/*padding: 20px;*/
+	background-color: black;
+}
+.menu-img1 {
+	background-image: url('./img/sweet7.jpg');
+}
+.menu-img2 {
+	background-image: url('./img/sweet9.jpg');
+}
+.menu-img3 {
+	background-image: url('./img/sweet6.jpg');
+}
+
+.fix3 {
+	background-image: url('./img/sweet8.jpg');
+	height: 500px;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+
