adding menu imgs

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ nav li {
 	/*padding: 20px;*/
 	background-color: black;
 }
-.menu-img1 {
+/*.menu-img1 {
 	background-image: url('./img/sweet7.jpg');
 }
 .menu-img2 {
@@ -158,7 +158,7 @@ nav li {
 }
 .menu-img3 {
 	background-image: url('./img/sweet6.jpg');
-}
+}*/
 
 .fix3 {
 	background-image: url('./img/sweet8.jpg');
